--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,11 +6,11 @@
 <div layout:fragment="content">
     <main class="container">
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary"
-             style="background-image: url('${articleOfTheDay.getImgUrl()}');">
-            <div class="col-lg-6 px-0">
+             th:style="'background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('+${articleOfTheDay.getImgUrl()}+');'">
+            <div class="col-lg-6 px-0 text-white">
                 <h2 class="display-4 fst-italic" th:text="${articleOfTheDay.getTitle()}"></h2>
                 <p class="lead my-3"  th:text="${articleOfTheDay.getDescription()}"></p>
-                <p class="lead mb-0"><a th:href="${'/article/'+articleOfTheDay.getId()}" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+                <p class="lead mb-0"><a th:href="${'/article/'+articleOfTheDay.getId()}" class="fw-bold text-white">Continue reading...</a></p>
             </div>
         </div>
         <div class="row mb-2">
@@ -116,40 +116,6 @@
                     <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                     <h3>Example table</h3>
                     <p>And don't forget about tables in these posts:</p>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Upvotes</th>
-                            <th>Downvotes</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>Alice</td>
-                            <td>10</td>
-                            <td>11</td>
-                        </tr>
-                        <tr>
-                            <td>Bob</td>
-                            <td>4</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>Charlie</td>
-                            <td>7</td>
-                            <td>9</td>
-                        </tr>
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <td>Totals</td>
-                            <td>21</td>
-                            <td>23</td>
-                        </tr>
-                        </tfoot>
-                    </table>
-
                     <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
                 </article>
 
@@ -176,12 +142,11 @@
             <div class="col-md-4">
                 <div class="position-sticky" style="top: 2rem;">
                     <div class="p-4 mb-3 bg-body-tertiary rounded">
-                        <h4 class="fst-italic">About</h4>
-                        <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                        <h4 class="fst-italic">О нас</h4>
+                        <p class="mb-0">Мы рассказываем раельные, не придуманные истории</p>
                     </div>
-
                     <div>
-                        <h4 class="fst-italic">Recent posts</h4>
+                        <h4 class="fst-italic">Недавние статьи</h4>
                         <ul class="list-unstyled">
                             <li>
                                 <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
@@ -244,5 +209,11 @@
         </div>
 
     </main>
+    <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
+        <p>Blog built with <a href="https://getbootstrap.com/">Bootstrap</a>.</p>
+        <p class="mb-0">
+            <a href="#">Back to top</a>
+        </p>
+    </footer>
 </div>
 </html>
