--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -4,7 +4,29 @@
       layout:decorate="layout/main.html">
 <div layout:fragment="content">
     <input type="hidden" id="articleId" th:value="${articleId}">
-    <div id="article"></div>
+    <input type="hidden" id="authorId" th:value="${currentUser.id}">
+    <main class="container">
+        <div class="row g-5">
+            <div id="article" class="col-md-8"></div>
+            <div th:insert="~{layout/sidebar}" class="col-md-4"></div>
+        </div>
+    </main>
+
+    <div class="modal fade" id="addNewCommentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label class="form-label" for="commentText">Текст</label>
+                        <textarea type="text" class="form-control" id="commentText" name="commentText" rows="5"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        <button onclick="addNewComment(articleId)" type="button" class="btn btn-primary">Сохранить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     <script type="text/javascript">
         let articleId = document.getElementById("articleId").value
         loadArticle(articleId)
@@ -22,22 +44,30 @@
                     categoriesReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/categories");
                     categoriesReq.onload = function () {
                         let categories = JSON.parse(categoriesReq.responseText);
-
                         let commentsReq = new XMLHttpRequest();
                         commentsReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/comments");
                         commentsReq.onload = function () {
                             let comments = JSON.parse(commentsReq.responseText);
                             let html = ""
-                            html += "<div class='row g-5'>"
-                            html += "<div class='col-md-8'>"
+                            // html += "<div class='row g-5'>"
+                            // html += "<div class='col-md-8'>"
                             html += "<article class='blog-post'>"
                             html += "<h2 class='display-5 link-body-emphasis mb-1'>" + article.title + "</h2>"
-                            html += "<p class='blog-post-meta'>" + article.postTime + " by <a href=\"#\">" + authorFullName + "</a></p>"
-                            html += "<p>" + article.text + "</p>"
-                            html += "<p>" + comments.commentText + "</p>"
-                            html += "<button type='button' class='btn btn-link'>" + categories.name + "</button>"
-                            html += "</div>"
-                            html += "</div>"
+                            html += "<p class='blog-post-meta'>" + article.postTime + " автор <a href=\"#\">" + authorFullName + "</a></p>"
+                            html += "<img class='w-100' src='"+article.imgUrl+"'>"
+                            html += "<div class='mt-3'>" + article.text + "</div>"
+                            for(let i=0; i< categories.length; i++){
+                                html += "<button type='button' class='btn btn-link'>" + categories[i].name + "</button>"
+                            }
+                            html += "<hr>"
+                            html += "<p><b>Комментарии:</b></p>"
+                            for(let i=0; i< comments.length; i++) {
+                                html += "<p class='fw-medium'>" + comments[i].author.fullName + " <span>"+comments[i].commentTime+"</span></p>"
+                                html += "<p>" + comments[i].commentText + "</p>"
+                            }
+                            html += "<button onclick='addNewCommentModal()' class='btn btn-sm btn-secondary'>Новый комментарий</button>"
+                            // html += "</div>"
+                            // html += "</div>"
                             document.getElementById("article").innerHTML = html
                         }
                         commentsReq.send()
@@ -47,6 +77,31 @@
                 authorReq.send();
             }
             req.send()
+        }
+
+        function addNewCommentModal(){
+            const myModal = new bootstrap.Modal("#addNewCommentModal", {backdrop: true, focus: true, keyboard: true})
+            myModal.show();
+        }
+
+        function addNewComment(articleId){
+            let req = new XMLHttpRequest()
+            let commentCreate = {
+                "commentText" : document.getElementById("commentText").value,
+                "articleId" : articleId,
+                "authorId" : document.getElementById("authorId").value
+            }
+            req.open("POST", "http://localhost:8080/api/comments")
+            req.setRequestHeader("Content-type", "application/json")
+            req.send(JSON.stringify(commentCreate))
+            req.onload = function () {
+                if (req.status === 200) {
+                    window.location.href = "http://localhost:8080/article/" + articleId
+                } else if (req.status === 400) {
+                    alert(req.response)
+                }
+            }
+
         }
     </script>
 </div>
