--- a/src/main/resources/templates/addarticle.html
+++ b/src/main/resources/templates/addarticle.html
@@ -37,7 +37,7 @@
                     <option value="4">Культура</option>
                     <option value="5">Бизнес</option>
                     <option value="6">Политика</option>
-                    <option value="7">Мнение</option>
+                    <option value="7">Спорт</option>
                     <option value="8">Наука</option>
                     <option value="9">Здоровье</option>
                     <option value="10">Мода</option>
