--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <div layout:fragment="content">
     <main class="container">
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary"
-             th:style="'background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('+${articleOfTheDay.getImgUrl()}+');'">
+             th:style="'background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('+${articleOfTheDay.getImgUrl()}+'); background-size: cover;'">
             <div class="col-lg-6 px-0 text-white">
                 <h2 class="display-4 fst-italic" th:text="${articleOfTheDay.getTitle()}"></h2>
                 <p class="lead my-3"  th:text="${articleOfTheDay.getDescription()}"></p>
@@ -17,7 +17,13 @@
             <div class="col-md-8">
                 <article class="blog-post" th:each="article :${articles}">
                     <h4 class="display-5 link-body-emphasis mb-1" th:text="${article.getTitle()}"></h4>
-                    <p class="blog-post-meta" th:text="${article.getPostTime()}"><span> автор </span><a href="#" th:text="${article.getAuthorId()}"></a></p>
+                    <p class="blog-post-meta">
+                        <span th:text="${#temporals.format(article.postTime, 'dd MMMM yyyy HH:mm')}"></span>
+
+<!--                        <span th:text="${article.getPostTime()}"></span>-->
+                        <span> автор </span>
+                        <a th:href="${'/author/' + article.getAuthor().getId()}" th:text="${article.getAuthor().fullName}"></a>
+                    </p>
                     <p th:text="${article.getDescription()}"></p>
                     <p><a th:href="${'/article/'+article.getId()}">Подробнее...</a></p>
                     <hr>
@@ -31,71 +37,6 @@
             </div>
 
             <div class="col-md-4" th:insert="~{layout/sidebar}">
-<!--                <div class="position-sticky" style="top: 2rem;">-->
-<!--                    <div class="p-4 mb-3 bg-body-tertiary rounded">-->
-<!--                        <h4 class="fst-italic">О нас</h4>-->
-<!--                        <p class="mb-0">Мы рассказываем раельные, не придуманные истории</p>-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <h4 class="fst-italic">Недавние статьи</h4>-->
-<!--                        <ul class="list-unstyled">-->
-<!--                            <li>-->
-<!--                                <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">-->
-<!--                                    <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>-->
-<!--                                    <div class="col-lg-8">-->
-<!--                                        <h6 class="mb-0">Example blog post title</h6>-->
-<!--                                        <small class="text-body-secondary">January 15, 2023</small>-->
-<!--                                    </div>-->
-<!--                                </a>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">-->
-<!--                                    <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>-->
-<!--                                    <div class="col-lg-8">-->
-<!--                                        <h6 class="mb-0">This is another blog post title</h6>-->
-<!--                                        <small class="text-body-secondary">January 14, 2023</small>-->
-<!--                                    </div>-->
-<!--                                </a>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">-->
-<!--                                    <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>-->
-<!--                                    <div class="col-lg-8">-->
-<!--                                        <h6 class="mb-0">Longer blog post title: This one has multiple lines!</h6>-->
-<!--                                        <small class="text-body-secondary">January 13, 2023</small>-->
-<!--                                    </div>-->
-<!--                                </a>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
-
-<!--                    <div class="p-4">-->
-<!--                        <h4 class="fst-italic">Archives</h4>-->
-<!--                        <ol class="list-unstyled mb-0">-->
-<!--                            <li><a href="#">March 2021</a></li>-->
-<!--                            <li><a href="#">February 2021</a></li>-->
-<!--                            <li><a href="#">January 2021</a></li>-->
-<!--                            <li><a href="#">December 2020</a></li>-->
-<!--                            <li><a href="#">November 2020</a></li>-->
-<!--                            <li><a href="#">October 2020</a></li>-->
-<!--                            <li><a href="#">September 2020</a></li>-->
-<!--                            <li><a href="#">August 2020</a></li>-->
-<!--                            <li><a href="#">July 2020</a></li>-->
-<!--                            <li><a href="#">June 2020</a></li>-->
-<!--                            <li><a href="#">May 2020</a></li>-->
-<!--                            <li><a href="#">April 2020</a></li>-->
-<!--                        </ol>-->
-<!--                    </div>-->
-
-<!--                    <div class="p-4">-->
-<!--                        <h4 class="fst-italic">Elsewhere</h4>-->
-<!--                        <ol class="list-unstyled">-->
-<!--                            <li><a href="#">GitHub</a></li>-->
-<!--                            <li><a href="#">Twitter</a></li>-->
-<!--                            <li><a href="#">Facebook</a></li>-->
-<!--                        </ol>-->
-<!--                    </div>-->
-<!--                </div>-->
             </div>
         </div>
 
