--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -12,8 +12,8 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{'/profile'}">Настройки</a></li>
-                        <li><a class="dropdown-item" th:href="@{'/myarticles'}">Мои статьи</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" th:href="@{'/myarticles'}" sec:authorize="hasAuthority('ROLE_Author')">Мои статьи</a></li>
+                        <li><a class="dropdown-item" th:href="@{'/allarticles'}" sec:authorize="hasAuthority('ROLE_Admin')">Все статьи</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,17 +34,17 @@
 
     <div class="nav-scroller py-1 mb-3 border-bottom">
         <nav class="nav nav-underline justify-content-between">
-            <a class="nav-item nav-link link-body-emphasis active" href="#">Мир</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Казахстан</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Технологии</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Культура</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Бизнес</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Политика</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Мнение</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Наука</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Здоровье</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Мода</a>
-            <a class="nav-item nav-link link-body-emphasis" href="#">Путешествия</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/1'}">Мир</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/2'}">Казахстан</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/3'}">Технологии</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/4'}">Культура</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/5'}">Бизнес</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/6'}">Политика</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/7'}">Спорт</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/8'}">Наука</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/9'}">Здоровье</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/10'}">Мода</a>
+            <a class="nav-item nav-link link-body-emphasis" th:href="@{'/category/11'}">Путешествия</a>
         </nav>
     </div>
 </div>
