--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -9,43 +9,14 @@
             </div>
             <div>
                 <h4 class="fst-italic">Недавние статьи</h4>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled" th:each="lastArticle : ${lastArticles}">
                     <li>
-                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
-                           href="#">
-                            <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="#777"/>
-                            </svg>
-                            <div class="col-lg-8">
-                                <h6 class="mb-0">Example blog post title</h6>
-                                <small class="text-body-secondary">January 15, 2023</small>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
-                           href="#">
-                            <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="#777"/>
-                            </svg>
-                            <div class="col-lg-8">
-                                <h6 class="mb-0">This is another blog post title</h6>
-                                <small class="text-body-secondary">January 14, 2023</small>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
-                           href="#">
-                            <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="#777"/>
-                            </svg>
-                            <div class="col-lg-8">
-                                <h6 class="mb-0">Longer blog post title: This one has multiple lines!</h6>
-                                <small class="text-body-secondary">January 13, 2023</small>
+                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-sm-center py-2 link-body-emphasis text-decoration-none border-top"
+                           th:href="${'/article/'+lastArticle.getId()}">
+                            <img alt="Article Image" th:src="${lastArticle.imgUrl}" width=175 height="96">
+                            <div>
+                                <h6 class="mb-0" th:text="${lastArticle.title}"></h6>
+                                <small class="text-body-secondary" th:text="${#temporals.format(lastArticle.postTime, 'dd MMMM yyyy HH:mm')}"></small>
                             </div>
                         </a>
                     </li>
@@ -71,9 +42,9 @@
             </div>
 
             <div class="p-4">
-                <h4 class="fst-italic">Elsewhere</h4>
+                <h4 class="fst-italic">Контакты</h4>
                 <ol class="list-unstyled">
-                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">Whatsapp</a></li>
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Facebook</a></li>
                 </ol>
